tests/typec-test/test_out/access-violation.txt
error: inaccessible scope item
 --> access-violation/root.ctl:5:22
  |
5 | fn main() -> uint => pass(0)
  |                      ^^^^ here
  |
 ::: access-violation/root/a.ctl:1:9
  |
1 | priv fn pass(v: uint) -> uint => v
  |         ---- info: item defined here
  |
  = info: item is defined in a different module and is private

error: inaccessible scope item
 --> access-violation/root.ctl:7:36
  |
7 | fn other_main() -> uint => A\new().a
  |                                    ^ here
  |
 ::: access-violation/root/a.ctl:4:10
  |
4 |     priv a: uint
  |          - info: item defined here
  |
  = info: item is defined in a different module and is private

